# react-native-zano

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  RNZano.podspec  ReactNativeZano.podspec  compose_ios_libzano.sh  eslint.config.mjs  nitro.json  package.android.json  package.desktop.json  package.ios.json  package.json  package.mobile.json  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/hyleteam/reactnativezano/: ReactNativeZanoPackage.kt
android/src/main/java/com/margelo/nitro/hyleteam/reactnativezano/: PlatformUtils.kt  ReactNativeZano.kt  ReactNativeZanoPackage.kt
cpp/: .clang-format  CoreRpc.cpp  CoreRpc.hpp  CoreRpcCodeGen.hpp  CoreRpcCodegen.hpp  PlainWallet.cpp  PlainWallet.hpp  PlainWalletCodeGen.hpp  PlainWalletTypes.hpp  ReactNativeZano.cpp  ReactNativeZano.hpp  WalletRpc.cpp  WalletRpc.hpp  WalletRpcCodeGen.hpp  WalletRpcCodegen.hpp  ZanoLib.cpp  ZanoLib.hpp
example/: app.json  babel.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/hyleteam/reactnativezano/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/ReactNativeZanoExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeZanoExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeZanoExample.xcodeproj/xcshareddata/xcschemes/: ReactNativeZanoExample.xcscheme
example/ios/ReactNativeZanoExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: PlatformHelpers.swift  PlatformUtils.swift  ReactNativeZano.swift
scripts/: check_dependencies.js  copy_libraries.js  pack_prebuilds.js  prepare_self.js  update_prebuilds.js
src/: ReactNativeZano.nitro.ts  asserts.ts  controller.ts  entities.ts  errors.ts  index.ts  index.tsx  zano-api.ts  zano.ts
src/core-rpc/: core-rpc.nitro.ts  core-rpc.ts  core-rpc.type.ts  index.ts  index.web.ts
src/plain-wallet/: enums.ts  index.ts  index.web.ts  plain-wallet.native.ts  plain-wallet.nitro.ts  plain-wallet.ts  plain-wallet.type.ts  plain-wallet.web.ts
src/platform/: index.tsx  index.web.ts  utils.nitro.ts
src/platform-utils/: index.ts  platform-utils.native.ts  platform-utils.ts  platform-utils.type.ts
src/utils/: errors.ts  index.ts  json-rpc.ts  typed-base64.ts  typed-json.ts
src/wallet-rpc/: index.ts  index.web.ts  wallet-rpc.native.ts  wallet-rpc.nitro.ts  wallet-rpc.ts  wallet-rpc.type.ts  wallet-rpc.web.ts
src/zano-lib/: enums.ts  index.ts  zano-lib.nitro.ts  zano-lib.ts
